[package]
name = "Find_addres_to_mnemonik_all"
version = "0.1.0"
authors = ["Deomin Dmitriy <deomindmitruy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-wallet = { git = "https://github.com/johncantrell97/rust-wallet" }
tiny-bip39 = "1.0.0"
num_cpus = "1.16.0"
tokio = { version = "1.20.1", features = ["full"] }
rand = "0.8.5"
ring = "0.16"